2007-10-20 Samuel Abels <http://debain.org>

	* exscript.py: Fixed the "quit" command on Huawei routers.
	* Release 0.9.11

2007-10-09 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/Transport.py: Increase default timeout to 30
	seconds.
	* exscript.py, lib/Exscript/stdlib/Connection/send.py: Fix: exit/quit
	command.

2007-10-07 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/*.py, lib/Exscript/stdlib/Device/vendor.py:
	Improved operating system and vendor detection.
	* lib/Exscript/Regex.py: Added support for regular expression modifiers.
	* lib/Exscript/stdlib/Device/os.py: New builtin function device.os().
	* exscript.py: Execute "quit" instead of "exit" on Huawei routers.

2007-10-06 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/Connection/wait_for.py: New builtin function.
	* lib/Exscript/ExpressionNode.py: Decreased priority of the "not" operator.

2007-10-05 Samuel Abels <http://debain.org>

	* exscript.py: Added --no-prompt switch.

2007-10-31 Samuel Abels <http://debain.org>

	* exscript.py: Added -a and -n switches.
	* lib/FooLib/Interact.py: get_user(): New.
	* lib/TerminalConnection/*.py: Add support for Huawei routers.
	* lib/TerminalConnection/Transport.py: Improved prompt matching.

2007-10-02 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/telnetlib.py: Speed up prompt matching by only
	searching through the last 40 bytes in the buffer. This also limits the
	maximum prompt length to 40 characters.
	* lib/Exscript/stdlib/Device/vendor.py: Improved Cisco router detection.

2007-09-27 Samuel Abels <http://debain.org>

	* lib/Exscript/Code.py, lib/Exscript/Exscript.py: Support windows newlines.
	* exscript.py: Added a --version flag.

2007-09-26 Samuel Abels <http://debain.org>

	* lib/Exscript/ExpressionNode.py: Fix: Arithmetic operations with 0 no
	longer fail.
	* lib/Exscript/Loop.py: Fix: "while" and "until" loops would not always
	work.
	* lib/Exscript/Extract.py: Added support for the "from" keyword.